--- a/app/components/Projects/Projects.css
+++ b/app/components/Projects/Projects.css
@@ -92,7 +92,7 @@
         .project-cards{
           display: flex;
           flex-direction: row;
-          justify-content: center;
+          justify-content: space-evenly;
         }
 
       }
