--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,11 @@
   --lt-frosted: rgba(255,255,255, 0.20);
   --br-orange09: #EB580219;
 
-  --mobile-width-max: 800px;
-  --mobile-width-min: 500px;
+  /*
+  Doesn't seem to work: use as documentation
+  --mobile-width-max: 900px;
+  */
+
   --fade-time: 1s;
   --slide-time: 1.3s;
   --slide-delay-time: .5s;
